# Themis

./: .env.example  .gitignore  Cargo.toml  README.md  dev.cmd  dev.sh  restart.cmd  restart.sh  sellme.md  tray.cmd  tray.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/themis-tray/: aux-window-close.js  capture-status.css  capture-status.js  config-status.css  config-status.js  diagnose.css  diagnose.html  diagnose.js  export-session.js  index.html  main.js  mini.css  mini.html  mini.js  package-lock.json  package.json  settings.css  settings.html  settings.js  styles.css  toolbar-overflow.js  tooltips.js  transcript-time.js  ui-modes.css  ui-modes.js  vite.config.js
apps/themis-tray/scripts/: generate-icons.mjs
apps/themis-tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/themis-tray/src-tauri/capabilities/: default.json
apps/themis-tray/src-tauri/icons/: icon.icns
apps/themis-tray/src-tauri/src/: lib.rs  macos_mini_panel.rs  macos_window.rs  main.rs  mini_mode.rs  overlay_ui.rs  window_presets.rs  window_wake.rs  windows_window.rs
crates/themis-analysis/: Cargo.toml
crates/themis-analysis/src/: factory.rs  glossary.rs  heuristic.rs  lib.rs  llm.rs  session_summary.rs
crates/themis-audio/: Cargo.toml  build.rs
crates/themis-audio/native/macos/: themis_tap.h  themis_tap.m
crates/themis-audio/src/: call_detect.rs  composite.rs  lib.rs  source.rs  stub.rs
crates/themis-audio/src/macos/: core_audio.rs  mod.rs  process_tap.rs
crates/themis-audio/src/windows/: endpoint.rs  mic.rs  mod.rs  pcm.rs  process.rs  sessions.rs  system_output.rs  wasapi.rs
crates/themis-azure/: Cargo.toml
crates/themis-azure/src/: chunk.rs  language_pick.rs  lib.rs  mock.rs  multilang.rs  recognition.rs  recognizer.rs  rest.rs  streaming.rs  transcript_fixup.rs
crates/themis-cli/: Cargo.toml  Info.plist  build.rs
crates/themis-cli/src/: main.rs
crates/themis-core/: Cargo.toml
crates/themis-core/src/: analysis.rs  analysis_diag.rs  analysis_prefs.rs  capture_diag.rs  config.rs  env_file.rs  frame.rs  gain.rs  latency.rs  lib.rs  pipeline.rs  state.rs
crates/themis-ipc/: Cargo.toml  build.rs
crates/themis-ipc/proto/: themis.proto
crates/themis-ipc/src/: client.rs  lib.rs  server.rs
crates/themis-service/: Cargo.toml  Info.plist  build.rs
crates/themis-service/src/: engine.rs  main.rs
docs/: architecture.md  issues.md  platform-notes.md  ui-modes-design.md
packaging/: RELEASE-INDEX.md  macos-dmg-install.txt  release-assets-readme-macos.md  release-assets-readme-windows.md  release-user-guide-macos.md  release-user-guide-windows.md
packaging/macos/: com.themis.agent.plist
packaging/windows/: themis-service.md  themis-service.xml
scripts/: build-release.cmd  build-release.ps1  build-release.sh  fix-macos-app-quarantine.sh  package-release-assets.ps1  package-release-assets.sh  prepare-macos-icons.sh  stage-release-bundle.sh  themis.ps1  themis.sh  write-release-docs.py
