[package]
name = "themis-audio"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cpal = "0.15"
themis-core = { workspace = true }
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }
