[package]
name = "themis-audio"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cpal = "0.15"
themis-core = { workspace = true }
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
cc = "1"

[target.'cfg(windows)'.dependencies]
wasapi = "0.19"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
] }
