[package]
name = "themis-azure"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
themis-core = { workspace = true }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
