[package]
name = "themis-azure"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util = "0.3"
regex = "1"
reqwest.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde.workspace = true
serde_json.workspace = true
themis-core = { workspace = true }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
