[package]
name = "themis-ipc"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
prost.workspace = true
themis-core = { workspace = true }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
